<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.coyo.codechallenge.data.model.Post" />

        <import type="android.view.View" />

        <variable
            name="isLoading"
            type="boolean" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/Theme.coyo.AppBarOverlay">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="parallax"
                app:navigationIcon="@drawable/ic_back">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:gravity="start|center"
                    android:text="@string/post_details_title"
                    android:textAppearance="?attr/textAppearanceHeadline5" />
            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:id="@+id/postDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/appbar"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/margin_super_small"
            android:layout_marginBottom="@dimen/margin_super_small"
            android:padding="@dimen/padding_extra_small">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/author_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/accountImgView"
                    android:layout_width="@dimen/icon_size_normal"
                    android:layout_height="@dimen/icon_size_normal"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_super_small"
                    android:contentDescription="@string/account_des"
                    android:padding="@dimen/padding_extra_small"
                    android:src="@drawable/ic_account" />

                <TextView
                    android:id="@+id/author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_super_small"
                    android:gravity="start|center"
                    android:padding="@dimen/padding_extra_small"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_big" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/author_content"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toTopOf="@id/description" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/author_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_extra_small"
                android:gravity="start|center"
                android:padding="@dimen/padding_extra_small"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/description"
                android:background="@android:color/darker_gray" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/comment_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/description"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/commentImgView"
                    android:layout_width="@dimen/icon_size_small"
                    android:layout_height="@dimen/icon_size_small"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_super_small"
                    android:contentDescription="@string/account_des"
                    android:padding="@dimen/padding_small"
                    android:src="@drawable/ic_comment" />

                <TextView
                    android:id="@+id/commentsCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/padding_extra_small"
                    android:gravity="start|center"
                    android:padding="@dimen/padding_extra_small"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textColor="@android:color/black" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/comment_content"
                android:background="@android:color/darker_gray" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/postDetails">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/commentsListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:divider="@android:color/transparent"
                android:dividerHeight="@dimen/divider_height"
                android:paddingStart="@dimen/margin_extra_small"
                android:paddingTop="@dimen/margin_super_small"
                android:paddingEnd="@dimen/margin_extra_small"
                android:scrollbars="vertical" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/loading"
                android:layout_width="@dimen/icon_size_normal"
                android:layout_height="@dimen/icon_size_normal"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:indeterminateBehavior="repeat"
                android:indeterminateTint="@color/coyo_gray_50"
                android:visibility="@{isLoading ? View.VISIBLE : View.GONE}" />

        </RelativeLayout>

    </RelativeLayout>

</layout>
