...
            android:id="@+id/swipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appbar">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/postsListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:divider="@android:color/transparent"
                android:dividerHeight="@dimen/divider_height"
                android:paddingStart="@dimen/card_side_margin"
...
